# IFROS

Autonomous_System/Lab1/: Autonomous systems lab.ipynb  BushFire.py  WaveFront.py  lab1.ipynb  potential_function_TANAKRIT_ZEWDIE.ipynb
Autonomous_System/Lab2/: lab2.ipynb  lab2_Tanakrit_Samantha.ipynb
Autonomous_System/Lab3/: a_star_discrete_Tanakrit_Samantha copy.ipynb  lab3_Tanakrit_Samantha.ipynb
HOI/: ee_plot.npy  ee_plot_both.npy  ee_plot_tran.npy  eta_plot.npy  eta_plot_both.npy  eta_plot_tran.npy
HOI/lab1/: Exercise1.py  Exercise1_Tanakrit.txt  Exercise2.py  Exercise2_Tanakrit.txt  lab2_robotics.py
HOI/lab3/: Exercise 1.py  Exercise1.py  Exercise1_Tanakrit.txt  Exercise2.py  Exercise2_Tanakrit.txt  lab2_robotics.py
HOI/lab4/: Exercise1_2.py  Exercise1_2_Tanakrit.py  lab4_robotics copy.py  lab4_robotics.py  lab4_robotics.txt
HOI/lab5/: Exercise1.py  Exercise1.txt  Exercise2.txt  lab4_robotics.py  lab5_robotics.txt
HOI/lab6/: lab2_robotics.py  lab5_robotics.py  lab6_robotics_ex3.py  mobile_manipulator_ex1.py  mobile_manipulator_ex2.py  mobile_manipulator_ex3.py  plot_intregation.py
HOPe/aruco_calibration/: CMakeLists.txt
HOPe/aruco_calibration/param/: param.txt  param2.txt
HOPe/aruco_calibration/src/: main.cpp
HOPe/aruco_detection/: CMakeLists.txt
HOPe/aruco_detection/src/: main.cpp
HOPe/draw_cube/: CMakeLists.txt
HOPe/generate_board/: CMakeLists.txt
HOPe/generate_board/src/: main.cpp
HOPe/generate_marker/: CMakeLists.txt
HOPe/pose_estimation/: CMakeLists.txt
Machine_Learning/Lab1/: Lab_01_Gradient_Descent_for_Linear_Regression_Tanakrit.ipynb
MultiView_Geomertry/Lab1/: untitled.mlx
Probalistic_Robot/Lab1/: DR_3DOFDifferentialDrive.py  DR_3DOFDifferentialDriveROS.py  (+6 more)
(+16 files in other folders)
